--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 <meta content="Flatroshop online shopping point" name="description">
 <meta content="logoby.us" name="author">
-<link href="images/ico.html" rel="shortcut icon">
+<link href="fonts/images/ico.html" rel="shortcut icon">
 <title>Flatro - Online Shop Template</title>
 
 <!-- Reset CSS -->
@@ -186,13 +186,13 @@
                     <ul class="dropdown-menu sub flyout-menu">
                       <li><a href="category-grid.html">Category Grid</a></li>
                       <li><a href="category-list.html">Category List</a></li>
-                      <li><a href="product.html">Product Page</a> </li>
+                      <li><a href="product.php">Product Page</a> </li>
                     </ul>
                   </li>
                   <li><a href="cart.html">Shoping Cart</a></li>
                   <li><a href="checkout.html">Checkout</a></li>
                   <li><a href="blog-single.html">Blog Post</a></li>
-                  <li><a href="contact.html">Contact us</a></li>
+                  <li><a href="contact.php">Contact us</a></li>
                 </ul>
                 <!-- end: Sub Menu --> 
               </div>
@@ -211,12 +211,12 @@
                     <ul class="dropdown-menu sub flyout-menu">
                       <li><a href="category-grid.html">Category Grid</a></li>
                       <li><a href="category-list.html">Category List</a></li>
-                      <li><a href="product.html">Product Page</a> </li>
+                      <li><a href="product.php">Product Page</a> </li>
                     </ul>
                   </li>
                   <li><a href="cart.html">Shoping Cart</a></li>
                   <li><a href="checkout.html">Checkout</a></li>
-                  <li><a href="contact.html">Contact us</a></li>
+                  <li><a href="contact.php">Contact us</a></li>
                 </ul>
                 <!-- end: Sub Menu --> 
               </div>
@@ -261,7 +261,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-12">
-                      <p> <a href="#a"><img alt="" src="images/menu-ad.jpg"></a> </p>
+                      <p> <a href="#a"><img alt="" src="fonts/images/menu-ad.jpg"></a> </p>
                     </div>
                   </div>
                 </div>
@@ -289,9 +289,9 @@
                       <div class="product-block">
                         <div class="image">
                           <div class="product-label product-sale"><span>SALE</span></div>
-                          <a class="img" href="product.html"><img alt="product info" src="images/products/product1.jpg" title="product title"></a> </div>
+                          <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product1.jpg" title="product title"></a> </div>
                         <div class="product-meta">
-                          <div class="name"><a href="product.html">Ladies Stylish Handbag</a></div>
+                          <div class="name"><a href="product.php">Ladies Stylish Handbag</a></div>
                           <div class="big-price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
                           <div class="big-btns"> <a class="btn btn-default btn-view pull-left" href="#">View</a> <a class="btn btn-default btn-addtocart pull-right" href="#">Add to
                             Cart</a> </div>
@@ -338,7 +338,7 @@
             <li> <a href="index.html"> <i class="fa fa-home fa-fw"></i> <span class="hidden-sm">Home</span></a> </li>
             <li> <a href="about.html"> <i class="fa fa-info-circle fa-fw"></i> <span class="hidden-sm">About</span></a> </li>
             <li> <a href="blog.html"> <i class="fa fa-bullhorn fa-fw"></i> <span class="hidden-sm">Blog</span></a> </li>
-            <li> <a href="contact.html"> <i class="fa fa-pencil-square-o fa-fw"></i> <span class="hidden-sm ">Contact</span></a> </li>
+            <li> <a href="contact.php"> <i class="fa fa-pencil-square-o fa-fw"></i> <span class="hidden-sm ">Contact</span></a> </li>
             <li class="dropdown"> <a href="cart.html"> <i class="fa fa-shopping-cart fa-fw"></i> <span class="hidden-sm"> 5 items | $4530.00</span></a> 
               <!-- Quick Cart -->
               <div class="dropdown-menu quick-cart">
@@ -405,7 +405,7 @@
       <div class="col-md-2 col-sm-3 hidden-xs p-wr">
         <div class="product-attrb-wr">
           <div class="product-attrb">
-            <div class="image"> <a class="img" href="product.html"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
+            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
           </div>
         </div>
       </div>
@@ -413,7 +413,7 @@
         <div class="product-attrb-wr">
           <div class="product-meta">
             <div class="name">
-              <h3><a href="product.html">Ladies Stylish Handbag</a></h3>
+              <h3><a href="product.php">Ladies Stylish Handbag</a></h3>
             </div>
             <div class="price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
             <a href="#a" class="btn normal color2">Edit Order</a> </div>
@@ -467,7 +467,7 @@
       <div class="col-md-2 col-sm-3 hidden-xs p-wr">
         <div class="product-attrb-wr">
           <div class="product-attrb">
-            <div class="image"> <a class="img" href="product.html"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
+            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
           </div>
         </div>
       </div>
@@ -475,7 +475,7 @@
         <div class="product-attrb-wr">
           <div class="product-meta">
             <div class="name">
-              <h3><a href="product.html">Ladies Stylish Handbag</a></h3>
+              <h3><a href="product.php">Ladies Stylish Handbag</a></h3>
             </div>
             <div class="price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
             <a href="#a" class="btn normal color2">Edit Order</a> </div>
@@ -529,7 +529,7 @@
       <div class="col-md-2 col-sm-3 hidden-xs p-wr">
         <div class="product-attrb-wr">
           <div class="product-attrb">
-            <div class="image"> <a class="img" href="product.html"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
+            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
           </div>
         </div>
       </div>
@@ -537,7 +537,7 @@
         <div class="product-attrb-wr">
           <div class="product-meta">
             <div class="name">
-              <h3><a href="product.html">Ladies Stylish Handbag</a></h3>
+              <h3><a href="product.php">Ladies Stylish Handbag</a></h3>
             </div>
             <div class="price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
             <a href="#a" class="btn normal color2">Edit Order</a> </div>
@@ -783,7 +783,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-sm-8 col-xs-12"> <span class="copytxt">&copy; Copyright 2013 by <a href="#">Flatro</a> -  All rights reserved</span> <span class="btmlinks"><a href="#">Return Policy</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></span> </div>
-        <div class="col-lg-4 col-sm-4 col-xs-12 payment-icons"> <a href="#"> <img src="images/icons/discover.png" alt="discover"> </a> <a href="#"> <img src="images/icons/2co.png" alt="2co"> </a> <a href="#"> <img src="images/icons/paypal.png" alt="paypal"> </a> <a href="#"> <img src="images/icons/mastercard.png" alt="master card"> </a> <a href="#"> <img src="images/icons/visa.png" alt="visa card"> </a> <a href="#"> <img src="images/icons/moneybookers.png" alt="moneybookers"> </a> </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 payment-icons"> <a href="#"> <img src="fonts/images/icons/discover.png" alt="discover"> </a> <a href="#"> <img src="fonts/images/icons/2co.png" alt="2co"> </a> <a href="#"> <img src="fonts/images/icons/paypal.png" alt="paypal"> </a> <a href="#"> <img src="fonts/images/icons/mastercard.png" alt="master card"> </a> <a href="#"> <img src="fonts/images/icons/visa.png" alt="visa card"> </a> <a href="#"> <img src="fonts/images/icons/moneybookers.png" alt="moneybookers"> </a> </div>
       </div>
     </div>
   </div>
