changes to index and products pages. Added product details to products page, Ratings remaining

--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 <meta content="Flatroshop online shopping point" name="description">
 <meta content="logoby.us" name="author">
-<link href="fonts/images/ico.html" rel="shortcut icon">
+<link href="images/ico.html" rel="shortcut icon">
 <title>Flatro - Online Shop Template</title>
 
 <!-- Reset CSS -->
@@ -261,7 +261,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-12">
-                      <p> <a href="#a"><img alt="" src="fonts/images/menu-ad.jpg"></a> </p>
+                      <p> <a href="#a"><img alt="" src="images/menu-ad.jpg"></a> </p>
                     </div>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                       <div class="product-block">
                         <div class="image">
                           <div class="product-label product-sale"><span>SALE</span></div>
-                          <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product1.jpg" title="product title"></a> </div>
+                          <a class="img" href="product.php"><img alt="product info" src="images/products/product1.jpg" title="product title"></a> </div>
                         <div class="product-meta">
                           <div class="name"><a href="product.php">Ladies Stylish Handbag</a></div>
                           <div class="big-price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
@@ -405,7 +405,7 @@
       <div class="col-md-2 col-sm-3 hidden-xs p-wr">
         <div class="product-attrb-wr">
           <div class="product-attrb">
-            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
+            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
           </div>
         </div>
       </div>
@@ -467,7 +467,7 @@
       <div class="col-md-2 col-sm-3 hidden-xs p-wr">
         <div class="product-attrb-wr">
           <div class="product-attrb">
-            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
+            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
           </div>
         </div>
       </div>
@@ -529,7 +529,7 @@
       <div class="col-md-2 col-sm-3 hidden-xs p-wr">
         <div class="product-attrb-wr">
           <div class="product-attrb">
-            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
+            <div class="image"> <a class="img" href="product.php"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
           </div>
         </div>
       </div>
@@ -783,7 +783,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-sm-8 col-xs-12"> <span class="copytxt">&copy; Copyright 2013 by <a href="#">Flatro</a> -  All rights reserved</span> <span class="btmlinks"><a href="#">Return Policy</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></span> </div>
-        <div class="col-lg-4 col-sm-4 col-xs-12 payment-icons"> <a href="#"> <img src="fonts/images/icons/discover.png" alt="discover"> </a> <a href="#"> <img src="fonts/images/icons/2co.png" alt="2co"> </a> <a href="#"> <img src="fonts/images/icons/paypal.png" alt="paypal"> </a> <a href="#"> <img src="fonts/images/icons/mastercard.png" alt="master card"> </a> <a href="#"> <img src="fonts/images/icons/visa.png" alt="visa card"> </a> <a href="#"> <img src="fonts/images/icons/moneybookers.png" alt="moneybookers"> </a> </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 payment-icons"> <a href="#"> <img src="images/icons/discover.png" alt="discover"> </a> <a href="#"> <img src="images/icons/2co.png" alt="2co"> </a> <a href="#"> <img src="images/icons/paypal.png" alt="paypal"> </a> <a href="#"> <img src="images/icons/mastercard.png" alt="master card"> </a> <a href="#"> <img src="images/icons/visa.png" alt="visa card"> </a> <a href="#"> <img src="images/icons/moneybookers.png" alt="moneybookers"> </a> </div>
       </div>
     </div>
   </div>
