--- a/category-grid.html
+++ b/category-grid.html
@@ -11,7 +11,7 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 <meta content="Flatroshop online shopping point" name="description">
 <meta content="logoby.us" name="author">
-<link href="fonts/images/ico.html" rel="shortcut icon">
+<link href="images/ico.html" rel="shortcut icon">
 <title>Flatro - Online Shop Template</title>
 
 <!-- Reset CSS -->
@@ -261,7 +261,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-12">
-                      <p> <a href="#a"><img alt="" src="fonts/images/menu-ad.jpg"></a> </p>
+                      <p> <a href="#a"><img alt="" src="images/menu-ad.jpg"></a> </p>
                     </div>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                       <div class="product-block">
                         <div class="image">
                           <div class="product-label product-sale"><span>SALE</span></div>
-                          <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product1.jpg" title="product title"></a> </div>
+                          <a class="img" href="product.php"><img alt="product info" src="images/products/product1.jpg" title="product title"></a> </div>
                         <div class="product-meta">
                           <div class="name"><a href="product.php">Ladies Stylish Handbag</a></div>
                           <div class="big-price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
@@ -459,7 +459,7 @@
               <div class="product-block">
                 <div class="image">
                   <div class="product-label product-sale"><span>SALE</span></div>
-                  <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product1.jpg" title="product title"></a> </div>
+                  <a class="img" href="product.php"><img alt="product info" src="images/products/product1.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Ladies Stylish Handbag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
@@ -480,7 +480,7 @@
             <!-- Product -->
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
               <div class="product-block">
-                <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
+                <div class="image"> <a class="img" href="product.php"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Female Strips Handbag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>520</span> </div>
@@ -503,7 +503,7 @@
               <div class="product-block">
                 <div class="image">
                   <div class="product-label product-new"><span>NEW</span></div>
-                  <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product3.jpg" title="product title"></a> </div>
+                  <a class="img" href="product.php"><img alt="product info" src="images/products/product3.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Blue Fashion Bag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>320</span> </div>
@@ -533,7 +533,7 @@
               <div class="product-block">
                 <div class="image">
                   <div class="product-label product-sale"><span>SALE</span></div>
-                  <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product1.jpg" title="product title"></a> </div>
+                  <a class="img" href="product.php"><img alt="product info" src="images/products/product1.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Ladies Stylish Handbag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
@@ -554,7 +554,7 @@
             <!-- Product -->
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
               <div class="product-block">
-                <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
+                <div class="image"> <a class="img" href="product.php"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Female Strips Handbag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>520</span> </div>
@@ -577,7 +577,7 @@
               <div class="product-block">
                 <div class="image">
                   <div class="product-label product-new"><span>NEW</span></div>
-                  <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product3.jpg" title="product title"></a> </div>
+                  <a class="img" href="product.php"><img alt="product info" src="images/products/product3.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Blue Fashion Bag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>320</span> </div>
@@ -607,7 +607,7 @@
               <div class="product-block">
                 <div class="image">
                   <div class="product-label product-sale"><span>SALE</span></div>
-                  <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product1.jpg" title="product title"></a> </div>
+                  <a class="img" href="product.php"><img alt="product info" src="images/products/product1.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Ladies Stylish Handbag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>96</span> <span class="price-old"><span class="sym">$</span>119.50</span> </div>
@@ -628,7 +628,7 @@
             <!-- Product -->
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
               <div class="product-block">
-                <div class="image"> <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product2.jpg" title="product title"></a> </div>
+                <div class="image"> <a class="img" href="product.php"><img alt="product info" src="images/products/product2.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Female Strips Handbag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>520</span> </div>
@@ -651,7 +651,7 @@
               <div class="product-block">
                 <div class="image">
                   <div class="product-label product-new"><span>NEW</span></div>
-                  <a class="img" href="product.php"><img alt="product info" src="fonts/images/products/product3.jpg" title="product title"></a> </div>
+                  <a class="img" href="product.php"><img alt="product info" src="images/products/product3.jpg" title="product title"></a> </div>
                 <div class="product-meta">
                   <div class="name"><a href="product.php">Blue Fashion Bag</a></div>
                   <div class="big-price"> <span class="price-new"><span class="sym">$</span>320</span> </div>
@@ -915,7 +915,7 @@ data-prettify="false"               // don't use spaces in large numbers, eg. 10
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-sm-8 col-xs-12"> <span class="copytxt">&copy; Copyright 2013 by <a href="#a">Flatro</a> - All rights reserved</span> <span class="btmlinks"><a href="#a">Return Policy</a> | <a href="#a">Privacy Policy</a> | <a href="#a">Terms of Use</a></span> </div>
-        <div class="col-lg-4 col-sm-4 col-xs-12 payment-icons"> <a href="#a"> <img alt="discover" src="fonts/images/icons/discover.png"> </a> <a href="#a"> <img alt="2co" src="fonts/images/icons/2co.png"> </a> <a href="#a"> <img alt="paypal" src="fonts/images/icons/paypal.png"> </a> <a href="#a"> <img alt="master card" src="fonts/images/icons/mastercard.png"> </a> <a href="#a"> <img alt="visa card" src="fonts/images/icons/visa.png"> </a> <a href="#a"> <img alt="moneybookers" src="fonts/images/icons/moneybookers.png"> </a> </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 payment-icons"> <a href="#a"> <img alt="discover" src="images/icons/discover.png"> </a> <a href="#a"> <img alt="2co" src="images/icons/2co.png"> </a> <a href="#a"> <img alt="paypal" src="images/icons/paypal.png"> </a> <a href="#a"> <img alt="master card" src="images/icons/mastercard.png"> </a> <a href="#a"> <img alt="visa card" src="images/icons/visa.png"> </a> <a href="#a"> <img alt="moneybookers" src="images/icons/moneybookers.png"> </a> </div>
       </div>
     </div>
   </div>
